Updated portfilio html/css to fix on iPhone

--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,8 @@ header .nav-selected {
   }
   header .nav-row {
       position: fixed;
+      top: 0px;
+      left: 0px;
   }
 }
 /*
@@ -98,7 +100,8 @@ https://stackoverflow.com/questions/31270148/how-do-i-make-a-wrapped-flexboxs-co
 
 
 .card-grid {
-    min-width: 300px;
+/*    min-width: 300px; */
+    max-width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -116,7 +119,7 @@ https://stackoverflow.com/questions/31270148/how-do-i-make-a-wrapped-flexboxs-co
 
     /* Formatting for cards within the grid */
     margin: 8px;
-    flex: 1;
+    flex: 1 1 280px; /* we would just use flex:1, but this fails on safari 9 due to this bug https://bugs.webkit.org/show_bug.cgi?id=136041 */
     min-width: 280px;
     box-shadow: 0 4px 5px 0 rgba(0,0,0,.14),0 1px 10px 0 rgba(0,0,0,.12),0 2px 4px -1px rgba(0,0,0,.2);
 
@@ -165,6 +168,26 @@ https://stackoverflow.com/questions/31270148/how-do-i-make-a-wrapped-flexboxs-co
 
 .card-footer > a:hover {
     color: blue;
+}
+
+
+/* On a mobile device, we add some padding at the top to accomodate the fixed header */
+@media (max-width: 600px) {
+    .card-grid {
+        padding-top: 40px;
+    }
+}
+/* On a mobile device, we add some padding at the top to accomodate the fixed header */
+@media (max-width: 600px) {
+    #section-blog {
+        padding-top: 30px;
+    }
+}
+/* On a mobile device, we add some padding at the top to accomodate the fixed header */
+@media (max-width: 600px) {
+    #section-contact {
+        padding-top: 40px;
+    }
 }
 footer {
     font-size: 8pt;
